# VULCAN

./: .gitignore  CMakeLists.txt  CMakeLists_windows.txt  Dossier_pedagogique_neutronics_simulator.docx  README.md  TODO.md  build_and_run.sh  build_tgui.sh  extract_libs.sh
common/input_files/: analyse_keff_gaussienne.xlsx  beam.ns  code_convergence.ns  concentration.ns  discrete.ns  discrete.ns.bak  discrete_chain_reaction.ns  discrete_explosion.ns  discrete_explosion.ns.bak  discrete_moderation_mass_1.ns  discrete_moderation_mass_10.ns  discrete_moderation_mass_238.ns  discrete_potential.ns  discrete_potential.ns.bak  discrete_small_and_big_particles.ns  geometry_1.ns  geometry_2.ns  infinite.ns  input.ns  input.ns.bak  input_saved.ns  interactions.ns  keff.ns  listing.ns  maracas.ns  mass.ns  poison.ns  poison.ns.bak  reflexions.ns  reflexions_disk.ns  stochastic.ns
common/themes/: GUITheme.txt  example_GUITheme_Black_v1.txt
include/: ContinuousManager.h  ControlRod.h  DataManager.h  Detector.h  DiscreteHydrogensSet.h  DiscreteManager.h  DiscreteNuclidesSet.h  DiscreteReactionsManager.h  DiscreteSpentNuclidesSet.h  GeometryCreator.h  Material.h  NeutronSet.h  Particle.h  ParticlesSet.h  SceneManager.h  Volume.h
include/GUI/: GUIChemistry.h  GUICreator.h  GUIGeometry.h  GUIKeff.h  GUIMinimal.h  GUIPopUp.h  GUISource.h  GUIWindow.h
src/: ContinuousManager.cpp  ControlRod.cpp  DataManager.cpp  Detector.cpp  DiscreteHydrogensSet.cpp  DiscreteManager.cpp  DiscreteNuclidesSet.cpp  DiscreteReactionsManager.cpp  DiscreteSpentNuclidesSet.cpp  GeometryCreator.cpp  Material.cpp  NeutronSet.cpp  Particle.cpp  ParticlesSet.cpp  SceneManager.cpp  Volume.cpp  main.cpp
src/GUI/: GUIChemistry.cpp  GUICreator.cpp  GUIKeff.cpp  (+5 more)
(+4 files in other folders)
